--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "aws-amplify": "^6.3.4",
+    "axios": "^1.7.2",
+    "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -19,6 +23,7 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/eslint": "^8.56.5",
+    "@types/lodash": "^4.17.4",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
