--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -43,6 +43,7 @@
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.9",
     "@types/swagger-jsdoc": "^6.0.4",
+    "@repo/types": "*",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "eslint": "^5.16.0",
